--- a/style.css
+++ b/style.css
@@ -1,8 +1,57 @@
-/* #resultado {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+}
+
+h1 {
+    display: flex;
+    justify-content: center;
+    color: white;
+    background-color: brown;
+}
+
+.container-botao{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    gap: 10px;
+}
+
+button {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: black 2px solid;
-    height: 25px;
-    width: 200px;
-} */
+    background-color: white;
+    color: brown;
+    border: brown 2px solid;
+    border-radius: 8px;
+    height: 30px;
+    width: 50px;
+}
+
+#resultado {
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 300px;
+}
+
+#regras {
+    display: flex;
+    height: 50px;
+    /* width: 100%; */
+    margin-right: 100px;
+    margin-left: 100px;
+    justify-content: center;
+    text-align: center;
+}
